[package]
name = "bigtable"
version = "0.3.3"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Lib for interfacing with Google BigTable Data API"
repository = "https://github.com/durch/rust-bigtable"
readme = "README.md"
keywords = ["Google", "Cloud", "BigTable", "Data", "API"]
license = "MIT"
documentation = "https://durch.github.io/rust-bigtable"

[lib]
name = "bigtable"
path = "src/lib.rs"

[dependencies]
protobuf = "1.0.24"
smpl_jwt = { path = "../rust-jwt" }
goauth = { path = "../rust-goauth" }
log = "0.3"
curl = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-serialize = "0.3"
protobuf-json = { path = "../rust-protobuf-json" }
